<resources>
    <string name="app_name">slots</string>
    <string name="play">Play</string>
    <string name="bet">Bet</string>
    <string name="spin">Spin</string>
    <string name="claim">Claim</string>
    <string name="reward">Your reward: %s coins</string>
    <string name="lottery">Lottery</string>
    <string name="main_coins">Your coins: %s💸</string>
    <string name="bet_set">100 coins bet set</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
</resources>