<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/frame_back"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍋"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/fourTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍒"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/sevenTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍇"
                android:textSize="75sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_back"
            android:orientation="vertical">

            <TextView
                android:id="@+id/twoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍆"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/fiveTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🍀"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/eightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="💰"
                android:textSize="75sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/threeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="⭐"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/sixTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🔔"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/nineTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7️⃣"
                android:textSize="75sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/amountOfCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_coins"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_menu"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/amountOfCoins"
        app:layout_constraintStart_toStartOf="@+id/amountOfCoins"
        app:layout_constraintTop_toBottomOf="@+id/amountOfCoins">

        <Button
            android:id="@+id/bet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_gradient"
            android:text="@string/bet"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/spin_button"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_gradient"
            android:text="@string/spin"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/betSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bet_set"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>